manifests/apps/minecraft-app/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
  namespace: minecraft-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-n04-lex
        nodeSelector: nodeSelector
      containers:
        - name: minecraft
          image: itzg/minecraft-server@sha256:730bebfb27fa17e0d5ed0315bf47eb50b4f90a746e199409268534b15cfbadc4
          ports:
            - containerPort: 25565
            - containerPort: 24454
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
