manifests/apps/minecraft-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-app
  namespace: minecraft-app
spec:
  selector:
    app: minecraft
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
    - protocol: UDP
      port: 24454
      targetPort: 24454
  type: LoadBalancer
