manifests/apps/minecraft-app/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: network-policy
  namespace: minecraft-app
spec:
  endpointSelector:
    matchLabels:
      app: minecraft-app
  egress:
    - {}
